fix popup overflow on scroll

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -85,6 +85,7 @@
    transform: translateY(-15px);
    max-width: 550px;
    animation: fade-out-slide-up 0.5s ease-out forwards;
+   overflow: hidden;
 }
 
 .modal__open .modal__popup {
